# BreadScribe

./: .coverage  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
prompts/: 1-initial-prompt.md  2-fixes.md  3-polish.md  4-ci.md
src/breadscribe/: __init__.py  audio_utils.py  cli.py  domain.py  errors.py  glossary.txt  io_utils.py  postprocess.py  subtitles.py  transcriber.py  types.py
tests/: test_audio_probe.py  test_cleaning.py  test_cli.py  test_cli_flags.py  test_cli_overwrite.py  test_cli_print.py  test_cli_print_lang_stream.py  test_discover_inputs.py  test_doctor.py  test_postprocess_brackets.py  test_samples_slow.py  test_subtitles.py
