[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "breadscribe"
version = "0.1.0"
description = "Local video/audio to text and subtitles using faster-whisper"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Breadcode" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "faster-whisper>=1.0.0",
  "typer[all]>=0.12.0",
  "rich>=13.7.0",
  "pandas>=2.2.0",
  "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "pytest-mock>=3.14",
]
lint = [
  "ruff>=0.6.3",
]

[project.scripts]
breadscribe = "breadscribe.cli:app"
breadscriber = "breadscribe.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/breadscribe"]

[tool.pytest.ini_options]
addopts = "-q --cov=breadscribe --cov-report=term-missing"
testpaths = ["tests"]
markers = ["slow: runs real transcription on sample files"]


